

0.8 +
=====================
 * Moved 2.0.5 header.pt to skins/ResourceRegistries_20compatibility and
   remove ResourceRegistries_20compatibility when Plone != 2.0.x
   [fschulze]

 * Check existance of stylesheets and javascripts before registering. This
   fixes reinstallation.
   [fschulze]

 * Removed duplicate getScripts function definition in tools/JSRegistry.py
   [fschulze]

 * Fixed JSRegistry for Plone < 2.1 where plone_utils.getSiteEncoding is not
   available.
   [fschulze]

 * renamed config.TOOLNAME to config.CSSTOOLNAME 
   and config.TOOLTYPE to config.CSSTOOLTYPE
   [batlogg]

 * Added tests for attributes on stylesheets. About time. 
   [elvix]

 * Added title for alternate stylesheets
   [fschulze]

 * Removing superflous skins directories
   [elvix]

 * Added new debugmode where stylesheets are not concatenated. 
   This will let things like the DOM inspector in Mozilla point to the right line-number. 
   [ldr][elvix]

 * Added bugfix for handling disabled items when cooking stylesheets.
   [fschulze]


0.8
=====================

 * Renamed to ResourceRegistries instead of the historical and wrong
   CSSRegistry
   [elvix]
   
 * Upgraded JSRegistry to have a more proper ZMI form, now with reordering support
   [elvix]
   
 * Changed the order elements are added to the JSRegistry
   [elvix]

 * Added license/copyright notice to composite files
   (neccesary for including for third party stuff)
   [elvix]

 * Bugfix fixing ZMI form for CSSRegistry
   [fschulze]


0.7
=====================

 * Added to Plone 2.1 migrations, added installation of the default
   Plone javascripts and stylesheets
   [elvix]

 * Make sure we intecept all requests for objects, even those already 
   present in the acquisition chain. Override __bobo_traverse__
   [elvix]

 * Handle cache settings in http headers for served files
   [elvix]

 * Handle http headers for inline scripts and stylesheets
   [elvix]
 