@@ -84,9 +84,9 @@ function shiftBlocks(fieldset, previousBlock){
      
         <div class="stylesheets-buttons">
         <p class="updown-buttons">
-                <button onclick="moveUp(this);return false;"> <!-- condition="not:repeat/stylesheet/start"-->
-                    move UP
-                </button>
+                <a onclick="moveUp(this);return false;" href="#" tal:attributes="href string:manage_moveStylesheet?id=${stylesheet/id}&direction=up">
+                     move UP
+                </a>
         </p>
         <p class="delete-button">
                 <a href="#" tal:attributes="href string:manage_removeStylesheet?id=${stylesheet/id}">
@@ -94,9 +94,9 @@ function shiftBlocks(fieldset, previousBlock){
                 </a>
         </p>
         <p>             
-                <button onclick="moveDown(this);return false;"> <!-- :condition="not:repeat/stylesheet/end"-->
-                    move DOWN
-                </button>             
+                <a onclick="moveDown(this);return false;" href="#" tal:attributes="href string:manage_moveStylesheet?id=${stylesheet/id}&direction=down">
+                     move DOWN
+                </a>
             </p>
             
       
